--- a/templates/section.html
+++ b/templates/section.html
@@ -51,36 +51,28 @@
 
 {# Blog posts #}
 {% if section.extra.inject_blog_posts %}
-<div>
-  {% for page in paginator.pages %}
-  {% if not page.extra.hidden %}
-  <a href="{{page.path}}" class="blog-post-listing-item">
-    <div>
-      <h4 {%if page.draft%}style="color:red;" {%endif%}>{{page.date | date(format="%b %d, %Y")}}</h4>
-      <h1>{{page.title}}</h1>
-      {% if page.extra.excerpt %}
-      <p>{{page.extra.excerpt}}</p>
-      {% endif %}
-    </div>
-  </a>
-  <br>
-  {% endif %}
-  {% endfor %}
-</div>
+    <ul style="margin:0">
+        <div>
+            {# Posts shall be broken down by year #}
+            {% set title_year = "3000" %}
+            {% for page in section.pages %}
+            {% if not page.extra.hidden %}
+            {% set page_year = page.date | date(format="%Y")%}
+            {% if page_year != title_year %}
+            {% set_global title_year = page_year %}
+    </ul>
+    <h2>{{title_year}}</h2>
+    <ul>
+        {% endif %}
 
-<div style="text-align: center;">
-  {% if paginator.previous %}
-  <a class="pn-previous" href="{{ paginator.previous }}">PREV</a>
-  {% endif %}
-  {% if paginator.previous and paginator.next %}
-    <span> • </span>
-  {% endif %}
-  {% if paginator.next %}
-  <a class="pn-next" href="{{ paginator.next }}">NEXT</a>
-  {% endif %}
-</div>
-
-{% endif %}
+        <li class="blog-post-li"><span style="color:{% if page.draft %}red{% else %}gray{% endif %};">{{page.date}}:</span> <a
+                href="{{page.path}}">{{page.title}}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+    <br><br>
+    {% endif %}
 
 {# RFCs #}
 {% if section.extra.inject_rfcs %}
