--- a/templates/index.html
+++ b/templates/index.html
@@ -10,48 +10,50 @@
 <meta name="og:title" content="Evan Pratten (VA3ZZA)" />
 
 <script type="application/ld+json">
-  [
-    {
-      "@context": "http://www.schema.org",
-      "@type": "person",
-      "name": "Evan Pratten",
-      "jobTitle": "Software Developer",
-      "gender": "male",
-      "url": "https://va3zza.com",
-      "image": "https://avatars.githubusercontent.com/u/21065412",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Oakville",
-        "addressRegion": "Ontario",
-        "postalCode": "L6H6W4",
-        "addressCountry": "Canada"
-      },
-      "email": "ewpratten@gmail.com",
-      "birthDate": "2003-06-01",
-      "sameAs": [
-        "https://github.com/ewpratten",
-        "https://www.linkedin.com/in/ewpratten",
-        "https://www.instagram.com/evanpratten",
-        "https://keybase.io/ewpratten",
-        "https://gitlab.com/ewpratten",
-        "https://twitter.com/ewpratten"
-      ]
+  {
+    "@context": "http://www.schema.org",
+    "@type": "person",
+    "name": "Evan Pratten",
+    "jobTitle": "Software Developer",
+    "callSign": "VA3ZZA",
+    "callSign": "VA3UJF",
+    "gender": "male",
+    "url": "https://va3zza.com",
+    "image": "https://avatars.githubusercontent.com/u/21065412",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Oakville",
+      "addressRegion": "Ontario",
+      "postalCode": "L6H6W4",
+      "addressCountry": "Canada"
     },
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "url": "https://va3zza.com/",
-      "about": "{{config.description}}",
-      "potentialAction": [{
-        "@type": "SearchAction",
-        "target": {
-          "@type": "EntryPoint",
-          "urlTemplate": "https://va3zza.com/search?q={search_term_string}"
-        },
-        "query-input": "required name=search_term_string"
-      }]
-    }
-  ]
+    "email": "ewpratten@gmail.com",
+    "birthDate": "2003-06-01",
+    "sameAs": [
+      "https://github.com/ewpratten",
+      "https://www.linkedin.com/in/ewpratten",
+      "https://www.instagram.com/evanpratten",
+      "https://keybase.io/ewpratten",
+      "https://gitlab.com/ewpratten",
+      "https://twitter.com/ewpratten"
+    ]
+  }
+</script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://va3zza.com/",
+    "about": "{{config.description}}",
+    "potentialAction": [{
+      "@type": "SearchAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://va3zza.com/search?q={search_term_string}"
+      },
+      "query-input": "required name=search_term_string"
+    }]
+  }
 </script>
 {% endblock head %}
 
