--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,10 @@
       "https://www.instagram.com/evanpratten",
       "https://keybase.io/ewpratten",
       "https://gitlab.com/ewpratten",
-      "https://twitter.com/ewpratten"
-    ]
+      "https://twitter.com/ewpratten",
+      "https://www.wikidata.org/wiki/Q111170999"
+    ],
+    "mainEntity": "https://www.wikidata.org/wiki/Q111170999"
   }
 </script>
 <script type="application/ld+json">
