--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,10 @@
     "@type": "person",
     "name": "Evan Pratten",
     "jobTitle": "Software Developer",
-    "callSign": "VA3ZZA",
+    "callSign": [
+      "VA3ZZA",
+      "VA3UJF"
+    ],
     "gender": "male",
     "url": "https://va3zza.com",
     "image": "https://avatars.githubusercontent.com/u/21065412",
