--- a/templates/index.html
+++ b/templates/index.html
@@ -10,38 +10,8 @@
 <meta name="og:title" content="Evan Pratten (VA3ZZA)" />
 
 <script type="application/ld+json">
-  {
-    "@context": "http://www.schema.org",
-    "@type": "person",
-    "name": "Evan Pratten",
-    "jobTitle": "Software Developer",
-    "callSign": [
-      "VA3ZZA",
-      "VA3UJF"
-    ],
-    "gender": "male",
-    "url": "https://va3zza.com",
-    "image": "https://avatars.githubusercontent.com/u/21065412",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Oakville",
-      "addressRegion": "Ontario",
-      "postalCode": "L6H6W4",
-      "addressCountry": "Canada"
-    },
-    "email": "ewpratten@gmail.com",
-    "birthDate": "2003-06-01",
-    "sameAs": [
-      "https://github.com/ewpratten",
-      "https://www.linkedin.com/in/ewpratten",
-      "https://www.instagram.com/evanpratten",
-      "https://keybase.io/ewpratten",
-      "https://gitlab.com/ewpratten",
-      "https://twitter.com/ewpratten",
-      "https://www.wikidata.org/wiki/Q111170999"
-    ],
-    "mainEntity": "https://www.wikidata.org/wiki/Q111170999"
-  }
+  {% set person_ld = load_data(path="static/person.jsonld")%}
+  {% if person_ld %}{{person_ld | safe}}{% endif %}
 </script>
 <script type="application/ld+json">
   {
