--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 {{ super() }}
 <meta property="og:description" content="{{config.description}}" />
 <meta property="description" content="{{config.description}}" />
+<meta name="description" content="{{config.description}}">
 <meta name="og:title" content="Evan Pratten (VA3ZZA)" />
 
 <script type="application/ld+json">
