--- a/templates/page.html
+++ b/templates/page.html
@@ -39,6 +39,13 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
 </style>
 {% endif %}
 
+{# Handle flags #}
+{% if page.extra.uses_flags %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.4.3/css/flag-icons.min.css"
+    integrity="sha512-uvXdJud8WaOlQFjlz9B15Yy2Au/bMAvz79F7Xa6OakCl2jvQPdHD0hb3dEqZRdSwG4/sknePXlE7GiarwA/9Wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endif %}
+
 {# Handle loading JSONLD #}
 {% if page.extra.is_rfc or page.description and page.date %}
 <script type="application/ld+json">
