--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo}}"/>
+    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo}}" />
     {% if current_url %}
     <link rel="canonical" href="{{current_url}}" />
     {% endif %}
@@ -32,11 +32,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Urbanist:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://maxst.icons8.com">
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/project_mosaic.css">
+
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css"
+        integrity="sha512-Oy18vBnbSJkXTndr2n6lDMO5NN31UljR8e/ICzVPrGpSud4Gkckb8yUpqhKuUNoE+o9gAb4O/rAxxw1ojyUVzg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <meta name="twitter:card" content="summary" />
     <meta name="og:site" content="va3zza.com" />
@@ -79,9 +88,9 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
-                <a href="/contact">Contact</a> 
-                {# <a href="/hobbies">Hobbies</a>  #}
-                {# <a href="/whois">WHOIS</a>  #}
+                <a href="/contact">Contact</a>
+                {# <a href="/hobbies">Hobbies</a> #}
+                {# <a href="/whois">WHOIS</a> #}
                 {# <a href="/rfc">RFC</a> #}
             </p>
             <hr>
@@ -90,7 +99,7 @@
             {% block content %}
             {% endblock content %}
         </div>
-        
+
         {# <div id="footer">
             <div>
                 <h2>Evan Pratten</h2>
