--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
       safe 
   }}
 </script>
+
+{# Handle flags #}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/6.4.3/css/flag-icons.min.css"
+  integrity="sha512-uvXdJud8WaOlQFjlz9B15Yy2Au/bMAvz79F7Xa6OakCl2jvQPdHD0hb3dEqZRdSwG4/sknePXlE7GiarwA/9Wg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 {% endblock head %}
 
 {% block content %}
