--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -288,3 +288,25 @@ ul {
     margin:0;
   }
 }
+
+
+.project {
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 1em;
+  margin-bottom: 1em;
+
+ p {
+   margin-top:0.25em;
+   margin-bottom:0.25em;
+ } 
+ h3 {
+  border-bottom: 1px solid lightgrey;
+  margin-top:0.25em;
+  margin-bottom:0.5em;
+  padding-bottom: 0.5em;
+ }
+ ul{
+   margin-bottom:0;
+ }
+}
