--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,7 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
+                <a href="/network">Network</a> |
                 <a href="/contact">Contact</a>
                 {# <a href="/hobbies">Hobbies</a> #}
                 {# <a href="/whois">WHOIS</a> #}
