--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -210,15 +210,8 @@ ul {
 }
 
 #footer {
-  background-color: rgb(201, 201, 201);
-  padding: 10px;
-  font-size: 0.8em;
-  color: black;
-  margin-top: 30px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
+  margin-top: 2em;
+  text-align:center;
 }
 
 .carded-section {
