--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@ Not Found
 
 {% block content %}
 <h1>404: Not Found</h1>
-<p>There is a large chance you reached this page through a <code>retrylife.ca</code> link. I have recently changed my primary domain name to <code>va3zza.com</code></p>
+<p>There is a large chance you reached this page through a <code>retrylife.ca</code> or <code>va3zza.com</code> link. I have recently changed my primary domain name to <code>ewpratten.com</code></p>
 <p>I would appreciate if you could send me an email letting me know what you clicked to get here.</p>
 <p>Click one of the links at the top of this page to navigate through the new website.</p>
 {% endblock content %}
