--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=" rss.xml",
         trailing_slash=false)}}">
-    <link rel="webmention" href="https://webmention.io/va3zza.com/webmention" />
-    <link rel="pingback" href="https://webmention.io/va3zza.com/xmlrpc" />
+    <link rel="webmention" href="https://webmention.io/ewpratten.com/webmention" />
+    <link rel="pingback" href="https://webmention.io/ewpratten.com/xmlrpc" />
 
     <title>{% block title %}{% endblock title %} | {{config.extra.name}}</title>
 
@@ -48,7 +48,7 @@
 
 
     <meta name="twitter:card" content="summary" />
-    <meta name="og:site" content="va3zza.com" />
+    <meta name="og:site" content="ewpratten.com" />
     <meta name="og:image" content="{{config.extra.profile_photo}}" />
     <meta name="twitter:creator" content="@ewpratten">
     <meta name="og:site_name" content="Evan Pratten (VA3ZZA)" />
@@ -101,13 +101,15 @@
             {% endblock content %}
         </div>
 
-        {# <div id="footer">
-            <div>
-                <h2>Evan Pratten</h2>
-            </div>
-            <div>
-            </div>
-        </div> #}
+        <div id="footer">
+            <p>-- EOF --</p>
+            <p>
+                <em>
+                    Thanks for reading :)<br>
+                    Site design & content by: <a href="/contact">Evan Pratten</a>
+                </em>
+            </p>
+        </div>
     </div>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -141,7 +143,7 @@
     {# URL Rewriter for retrylife.ca #}
     <script>
         if (window.location.hostname == 'retrylife.ca') {
-            window.location.href = window.location.href.replace('retrylife.ca', 'va3zza.com');
+            window.location.href = window.location.href.replace('retrylife.ca', 'ewpratten.com');
         }
     </script>
 </body>
