--- a/templates/section.html
+++ b/templates/section.html
@@ -29,11 +29,11 @@
             "item": {
                 "@type": "Article",
                 "headline": "{{page.title}}",
-                "url":"https://va3zza.com{{page.path | safe}}",
+                "url":"https://ewpratten.com{{page.path | safe}}",
                 "author": [{
                     "@type": "Person",
                     "name": "Evan Pratten",
-                    "url": "https://va3zza.com"
+                    "url": "https://ewpratten.com"
                   }]
             }
         } {% if not loop.last %},{% endif %}
