--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
         </div>
 
         <div id="footer">
-            <p>-- EOF --</p>
+            <p class="gray">-- EOF --</p>
             <p>
                 <em>
                     Thanks for reading :)<br>
