--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,8 @@
             <p>
                 <em>
                     Thanks for reading :)<br>
-                    Site design & content by: <a href="/contact">Evan Pratten</a>
+                    Site design & content by: <a href="/contact">Evan Pratten</a><br>
+                    Consider <a href="https://www.paypal.com/donate/?hosted_button_id=V8MYNJ68MEKDA" target="_blank">supporting my work</a> if you like what you see<br>
                 </em>
             </p>
         </div>
