--- a/templates/base.html
+++ b/templates/base.html
@@ -105,9 +105,15 @@
             <p class="gray">-- EOF --</p>
             <p>
                 <em>
+                    <a href="https://github.com/ewpratten/va3zza.com"><i class="lab la-github"></i></a>
+                    <a href="https://status.ewpratten.com"><i class="las la-info-circle"></i></a>
+                    <a href="/rss.xml"><i class="las la-rss"></i></a><br>
+
                     Thanks for reading :)<br>
                     Site design & content by: <a href="/contact">Evan Pratten</a><br>
-                    Consider <a href="https://www.paypal.com/donate/?hosted_button_id=V8MYNJ68MEKDA" target="_blank">supporting my work</a> if you like what you see<br>
+                    Consider <a href="https://www.paypal.com/donate/?hosted_button_id=V8MYNJ68MEKDA"
+                        target="_blank">supporting my work</a> if you like what you see<br>
+
                 </em>
             </p>
         </div>
