--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
     <meta name="og:image" content="{{config.extra.profile_photo}}" />
     <meta name="twitter:creator" content="@ewpratten">
     <meta name="og:site_name" content="Evan Pratten (VA3ZZA)" />
+
     {% endblock head %}
 </head>
 
@@ -111,8 +112,7 @@
 
                     Thanks for reading :)<br>
                     Site design & content by: <a href="/contact">Evan Pratten</a><br>
-                    Consider <a href="https://www.paypal.com/donate/?hosted_button_id=V8MYNJ68MEKDA"
-                        target="_blank">supporting my work</a> if you like what you see<br>
+                    Consider <a href="/donate" target="_blank">supporting my work</a> if you like what you see<br>
 
                 </em>
             </p>
