--- a/templates/page.html
+++ b/templates/page.html
@@ -61,6 +61,12 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], displayMat
     }}
 </script>
 {% endif %}
+
+{# Handle redirects if needed #}
+{% if page.extra.redir_to %}
+<meta http-equiv="refresh" content="0; url={{page.extra.redir_to}}" />
+{% endif %}
+
 {% endblock head %}
 
 {% block profile %}
