And publish the products page

--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -303,3 +303,13 @@ ul {
    margin-bottom:0;
  }
 }
+
+.homepage-showoff {
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+
+  background-color: #e3e3e3;
+  color: black;
+}
