--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,8 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
-                <a href="/network">Network</a> |
+                {# <a href="/work">My Work</a> | #}
+                {# <a href="/network">Network</a> | #}
                 <a href="/contact">Contact</a>
                 {# <a href="/hobbies">Hobbies</a> #}
                 {# <a href="/whois">WHOIS</a> #}
@@ -111,7 +112,7 @@
                     <a href="/rss.xml"><i class="las la-rss"></i></a><br>
 
                     Thanks for reading :)<br>
-                    Site design & content by: <a href="/contact">Evan Pratten</a><br>
+                    Site design & content by: <a href="/info">Evan Pratten</a><br>
                     Consider <a href="/donate" target="_blank">supporting my work</a> if you like what you see<br>
 
                 </em>
