--- a/templates/index.html
+++ b/templates/index.html
@@ -37,5 +37,8 @@
 {% endblock head %}
 
 {% block content %}
+{# <br>
+<article class="markdown-body"> #}
 {{section.content | safe}}
+{# </article> #}
 {% endblock content %}
