--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
         })(window, document, 'script', 'dataLayer', 'GTM-KFJ95RP');</script>
     <!-- End Google Tag Manager -->
 
+    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,6 +91,7 @@
             <p>
                 <a href="/">Home</a> |
                 <a href="/blog">Blog</a> |
+                {# <a href="/blog">Rabbit Hole</a> | #}
                 {# <a href="/work">My Work</a> | #}
                 {# <a href="/network">Network</a> | #}
                 <a href="/contact">Contact</a>
@@ -154,6 +157,9 @@
             window.location.href = window.location.href.replace('retrylife.ca', 'ewpratten.com');
         }
     </script>
+
+    {# Meta magic for mastodon verification #}
+    <a rel="me" href="https://social.ewpratten.com/@evan" style="display:none;"></a>
 </body>
 
 </html>
