--- a/sass/styles/components/navbar.scss
+++ b/sass/styles/components/navbar.scss
@@ -17,6 +17,10 @@
 
     & > li {
       display: inline-block;
+    
+      .dropdown-menu {
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
     }
 
     .separator {
