--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo}}" />
     {% include "components/metadata/advertise-rss.html" %}
     {% include "components/metadata/opengraph.html" %}
 
@@ -54,6 +55,9 @@
     {# The whole page #}
     <div class="page">
 
+        {# Allow pages to override the content before the navbar #}
+        {% block page_start %}{% endblock page_start %}
+
         {# Navbar #}
         <div class="container">
             {% include "components/navbar.html" %}
@@ -74,6 +78,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    {% include "components/metadata/analytics.html" %}
 </body>
 
 </html>
