--- a/templates/section.html
+++ b/templates/section.html
@@ -8,6 +8,9 @@
 {% endblock variable_wormhole %}
 
 {# Page content #}
+{% block page_start %}
+{% include "components/heading-card.html" %}
+{% endblock page_start %}
 {% block content %}
  {{ section.content | safe }}
 {% endblock content %}
