--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
 {{ super() }}
 {% set title = section.title %}
 {% set description = config.description %}
+{% if section.extra.uses %}
+{% set feature_flags = section.extra.uses %}
+{% endif %}
 {% endblock variable_wormhole %}
 
 {# Page content #}
