Some final cleanup

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="/styles/typography.css">
     <link rel="stylesheet" href="/styles/utils.css">
     <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/components/github-card.css">
 
     {# Component styles #}
     {% block component_styles %}
