--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,27 @@
 {% extends "base.html" %}
 
+{# Additional metadata for Google #}
+{% block head %}
+{{ super() }}
+
+<script type="application/ld+json">
+    {% set person_ld = load_data(path="static/person.jsonld")%}
+    {% if person_ld %}{{person_ld | safe}}{% endif %}
+  </script>
+<script type="application/ld+json">
+    {# Import our template file #}
+    {% set template = load_data(path="jsonld_templates/website.jsonld") %}
+    {# Now we can fill in any additional data #}
+    {{ template | 
+        replace(from="{{url}}", to=config.base_url) | 
+        replace(from="{{title}}", to=section.title) | 
+        replace(from="{{description}}", to=config.description) | 
+        replace(from="{{avatar}}", to=config.extra.profile_photo) | 
+        safe 
+    }}
+  </script>
+{% endblock head %}
+
 {# Pass data through to the base template #}
 {% block variable_wormhole %}
 {{ super() }}
