--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -10,17 +10,18 @@
         <li class="separator">|</li>
         <li><a href="/blog">Blog</a></li>
         <li class="separator">|</li>
-        {# <li class="dropdown-center">
+        <li class="dropdown-center">
             <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 More
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                {# <li>
+                    <p class="dropdown-header">More</p>
+                </li> #}
+                <li><a class="dropdown-item" href="/photography">Photography</a></li>
             </ul>
         </li>
-        <li class="separator">|</li> #}
+        <li class="separator">|</li>
         <li><a href="/contact">Contact</a></li>
     </ul>
     <hr>
