Allow lazy loading

--- a/templates/components/photo-collection-card.html
+++ b/templates/components/photo-collection-card.html
@@ -8,7 +8,7 @@
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="{{collection.extra.cover_image}}" class="img-fluid rounded-start cover-image"
-                    alt="Cover image">
+                    alt="Cover image" loading="lazy">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
