--- a/templates/shortcodes/clickable_photo.html
+++ b/templates/shortcodes/clickable_photo.html
@@ -1,4 +1,4 @@
 <a href="{{path}}">
-    <img src="{{path}}" {% if alt %} alt="{{alt}}" {% endif %}>
+    <img src="{{path}}" {% if alt %} alt="{{alt}}" {% endif %} loading="lazy">
 </a>
 <br>
