wip and failing

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -8,7 +8,7 @@
     <ul class="navbar-items">
         <li><a href="/">Home</a></li>
         <li class="separator">|</li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="/timeline">Timeline</a></li>
         <li class="separator">|</li>
         <li class="dropdown-center">
             <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -18,11 +18,13 @@
                 {# <li>
                     <p class="dropdown-header">More</p>
                 </li> #}
+                <li><a class="dropdown-item" href="/blog">Blog</a></li>
                 <li><a class="dropdown-item" href="/photography">Photography</a></li>
+                <li><a class="dropdown-item" href="/contact">Contact</a></li>
             </ul>
         </li>
-        <li class="separator">|</li>
-        <li><a href="/contact">Contact</a></li>
+        {# <li class="separator">|</li>
+        <li><a href="/contact">Contact</a></li> #}
     </ul>
     <hr>
 </div>
