--- a/sass/styles/typography.scss
+++ b/sass/styles/typography.scss
@@ -18,7 +18,7 @@ span {
 }
 a {
   text-decoration: none;
-  color: blue;
+  color: blue !important;
 
   &:visited {
     color: blue;
@@ -49,5 +49,20 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+span.date {
+  color: gray;
+  font-variant-numeric: tabular-nums;
+}
+
+ext {
+  font-family: "Line Awesome Free";
+  font-weight: 900;
+  font-variant-position: super;
+
+  &::before {
+    content: "\f35d";
   }
 }
