--- a/sass/styles/typography.scss
+++ b/sass/styles/typography.scss
@@ -18,7 +18,7 @@ span {
 }
 a {
   text-decoration: none;
-  color: blue;
+  color: blue !important;
 
   &:visited {
     color: blue;
@@ -50,4 +50,8 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.monospace {
+  font-variant-numeric: tabular-nums;
 }
