timeline in place

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -18,7 +18,7 @@
                 {# <li>
                     <p class="dropdown-header">More</p>
                 </li> #}
-                <li><a class="dropdown-item" href="/blog">Blog</a></li>
+                {# <li><a class="dropdown-item" href="/blog">Blog</a></li> #}
                 <li><a class="dropdown-item" href="/photography">Photography</a></li>
                 <li><a class="dropdown-item" href="/contact">Contact</a></li>
             </ul>
