--- a/templates/base.html
+++ b/templates/base.html
@@ -34,12 +34,13 @@
     {# External styles #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet"
+    {# <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css"
         integrity="sha512-Oy18vBnbSJkXTndr2n6lDMO5NN31UljR8e/ICzVPrGpSud4Gkckb8yUpqhKuUNoE+o9gAb4O/rAxxw1ojyUVzg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> #}
 
     {# Site-wide styles #}
+    <link rel="stylesheet" href="/dist/github-markdown-css/github-markdown-light.css">
     <link rel="stylesheet" href="/styles/fixes/instagram.css">
     <link rel="stylesheet" href="/styles/fixes/markdown.css">
     <link rel="stylesheet" href="/styles/fixes/mermaid.css">
