--- a/templates/base.html
+++ b/templates/base.html
@@ -41,16 +41,7 @@
 
     {# Site-wide styles #}
     <link rel="stylesheet" href="/dist/github-markdown-css/github-markdown-light.css">
-    <link rel="stylesheet" href="/styles/fixes/instagram.css">
-    <link rel="stylesheet" href="/styles/fixes/markdown.css">
-    <link rel="stylesheet" href="/styles/fixes/mermaid.css">
-    <link rel="stylesheet" href="/styles/fixes/tiktok.css">
-    <link rel="stylesheet" href="/styles/fixes/youtube.css">
-    <link rel="stylesheet" href="/styles/typography.css">
-    <link rel="stylesheet" href="/styles/utils.css">
-    <link rel="stylesheet" href="/styles/layout.css">
-    <link rel="stylesheet" href="/styles/icons.css">
-    <link rel="stylesheet" href="/styles/components/github-card.css">
+    <link rel="stylesheet" href="/global.css">
 
     {# Component styles #}
     {% block component_styles %}
