--- a/sass/styles/typography.scss
+++ b/sass/styles/typography.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Urbanist:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import "fonts";
 
 h1,
 h2,
