--- a/sass/styles/components/about-card.scss
+++ b/sass/styles/components/about-card.scss
@@ -12,8 +12,8 @@
   margin-bottom: 2em;
 
   .profile-photo-container {
-    max-width: 150px;
-    height: max-content;
+    width: 150px;
+    height: 150px;
     margin: 0;
     padding: 0;
 
