--- a/templates/components/metadata/analytics.html
+++ b/templates/components/metadata/analytics.html
@@ -1,5 +1,5 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
+<script defer src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
