--- a/templates/components/about-card.html
+++ b/templates/components/about-card.html
@@ -5,7 +5,7 @@
 
 <div class="about-card">
     <div class="profile-photo-container">
-        <img src="{{config.extra.profile_photo}}" alt="Profile Photo">
+        <img src="{{config.extra.profile_photo}}" alt="Profile Photo" loading="lazy">
     </div>
     <div class="text-container">
         <div class="intro-text">
