--- a/templates/components/heading-card.html
+++ b/templates/components/heading-card.html
@@ -5,7 +5,7 @@
 
 <div class="heading-card">
     <div class="profile-photo-container">
-        <img src="{{config.extra.profile_photo}}" alt="Profile Photo">
+        <img src="{{config.extra.profile_photo}}" alt="Profile Photo"  loading="lazy">
     </div>
     <div class="text-container">
         <h1>{{config.extra.name}}</h1>
