--- a/templates/components/about-card.html
+++ b/templates/components/about-card.html
@@ -15,26 +15,27 @@
         <div class="quick-links">
             <ul>
                 <li>
-                    <a href="mailto:{{config.extra.email}}" rel="me">
-                        <i class="las la-envelope"></i>
+                    <a class="about-quick-link" href="mailto:{{config.extra.email}}" rel="me">
+                        <img src="/dist/line-awesome/svg/envelope.svg" alt="email: " loading="lazy">
                         {{config.extra.email}}
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/{{config.extra.github}}" rel="me">
-                        <i class="lab la-github"></i>
+                    <a class="about-quick-link" href="https://github.com/{{config.extra.github}}" rel="me">
+                        <img src="/dist/line-awesome/svg/github.svg" alt="github: " loading="lazy">
                         {{config.extra.github}}
                     </a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/in/{{config.extra.linkedin}}" rel="me">
-                        <i class="lab la-linkedin"></i>
+                    <a class="about-quick-link" href="https://linkedin.com/in/{{config.extra.linkedin}}" rel="me">
+                        <img src="/dist/line-awesome/svg/linkedin.svg" alt="linkedin: " loading="lazy">
                         {{config.extra.linkedin}}
                     </a>
                 </li>
                 <li>
-                    <a href="/contact">
-                        ...&nbsp;&nbsp;more
+                    <a class="about-quick-link" href="/contact">
+                        <img src="/dist/line-awesome/svg/ellipsis-h-solid.svg" alt="... " loading="lazy">
+                        more
                     </a>
                 </li>
             </ul>
