--- a/templates/base.html
+++ b/templates/base.html
@@ -27,15 +27,12 @@
     {# Page title #}
     <title>{{title}} | {{config.title}}</title>
 
-    {# External styles #}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" lazyload>
-
     {# Site-wide styles #}
     <link rel="stylesheet" href="/global.css">
 
     {# Less important styles #}
     <link rel="stylesheet" href="/dist/github-markdown-css/github-markdown-light.css" lazyload>
+    <link rel="stylesheet" href="/styles/bootstrap.css" lazyload>
     <link rel="stylesheet" href="/styles/typography.css">
 
     {# Component styles #}
