--- a/templates/components/about-card.html
+++ b/templates/components/about-card.html
@@ -35,7 +35,7 @@
                 <li>
                     <a class="about-quick-link" href="/contact">
                         <img src="/dist/line-awesome/svg/ellipsis-h-solid.svg" alt="... " loading="lazy">
-                        more
+                        contact me
                     </a>
                 </li>
             </ul>
