--- a/templates/components/site-timeline.html
+++ b/templates/components/site-timeline.html
@@ -1,6 +1,7 @@
 {% block component_styles %}
 {{ super() }}
 <link rel="stylesheet" href="/styles/components/site-timeline.css">
+<link rel="stylesheet" href="/styles/icons.css">
 {% endblock component_styles %}
 
 {# Build a list of pages to work with #}
