--- a/templates/components/metadata/opengraph.html
+++ b/templates/components/metadata/opengraph.html
@@ -19,3 +19,16 @@
 {% if is_article %}
 <meta property="og:type" content="article" />
 {% endif %}
+
+{# music specifics #}
+{% if opengraph %}
+{% if opengraph.song %}
+<meta property="og:type" content="music.song" />
+<meta property="music:duration" content="{{opengraph.song.duration}}" />
+{% endif %}
+
+{% if opengraph.album %}
+<meta property="og:type" content="music.album" />
+<meta property="music:release_date" content="{{opengraph.song.duration}}" />
+{% endif %}
+{% endif %}
